--- a/.github/workflows/main_moodwave-backend.yml
+++ b/.github/workflows/main_moodwave-backend.yml
@@ -31,6 +31,11 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Running Tests
+        run: pytest
+
+      - name: Start app
+        run: python main.py
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
